Re-delete deleted files. Fix click event bubble issue with download button now that it contains spans. Fix file list cutting off download dropdown for the last entry, and horizontal scroll

--- a/static/css/sass/cdr_ui_styles.scss
+++ b/static/css/sass/cdr_ui_styles.scss
@@ -440,6 +440,7 @@ img.data-thumb {
 
 .child-records {
   font-size: 16px;
+  overflow: visible;
 
   .fa.default-img-icon {
     font-size: 32px;
